<resources>
    <string name="app_name">Login_page</string>
    <string name="login_title">JOB-SPOTTER</string>
    <string name="login">Login</string>
    <string name="logotitle">-World best job finding app-</string>
    <string name="remember">Remember me</string>
    <string name="fullname">Full name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="desired_pay">Desired Pay</string>
    <string name="salary">Salary</string>
    <string name="hour">Hour</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="employment_desired">Employment desired</string>
    <string name="full_time">Full-Time</string>
    <string name="part_time">Part-Time</string>
    <string name="personal_information">PERSONAL INFORMATION</string>
    <string name="employment_eligibility">EMPLOYMENT ELIGIBILITY</string>
    <string name="are_you_sl_citizen">Are you a citizen of SL ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="if_yes">If yes,</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="if_yes_please_explain">If yes, Please explain</string>
    <string name="type_here">Type here</string>
    <string name="degree">Degree</string>
    <string name="university">University</string>
    <string name="diploma">Diploma</string>
    <string name="college">College</string>
    <string name="education">EDUCATION</string>
    <string name="have_you_ever_worked_for_this_employer_before">Have you ever worked For this employer before ?</string>
    <string name="position_applied_for">Position applied for</string>
    <string name="have_you_ever_conflicted_of_felony">Have you ever conflicted of felony</string>
    <string name="my_applications">MY APPLICATIONS</string>
    <string name="application_no_1">Application No - 1</string>
    <string name="full_name">Full name:........</string>
    <string name="read">Read</string>
    <string name="update">Update</string>
    <string name="apply">Apply</string>
    <string name="delete">Delete</string>
    <string name="hi_welcome">Hi! Welcome</string>
    <string name="the_best_way_for_job_hunting">The Best Way For Job Hunting...</string>
    <string name="top_companies">Top Companies</string>
    <string name="recommended_jobs">Recommended Jobs</string>
    <string name="company_name">Company name : Koloxo Pvt Ltd</string>
    <string name="see_more">See more...</string>
    <string name="newest_jobs">Newest Jobs</string>
    <string name="add_cv_file">Add cv file</string>
    <string name="architecture_and_engineering">Architecture and engineering</string>
    <string name="arts_culture_and_entertainment">Arts,culture and entertainment</string>
    <string name="business_management_and_administration">Business,management and administration</string>
    <string name="job_categories">Job Categories</string>
    <string name="job_application">JOB APPLICATION</string>
    <string name="update_application">UPDATE APPLICATION</string>
    <string name="app_name2">NextPage</string>
    <string name="job_seeker_s_name">Job Seeker\'s Name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="age">Age</string>
    <string name="nic">NIC</string>
    <string name="update_account">Update Account</string>
    <string name="my_bookmarks">My bookmarks</string>
    <string name="delete_account">Delete Account</string>
    <string name="name">Name</string>
    <string name="interested_jobs">Interested jobs</string>
    <string name="register">Register</string>
    <string name="app_name3">Vacancies</string>
    <string name="job_title">Job title</string>
    <string name="job_category">Job category</string>
    <string name="job_description">Job description</string>
    <string name="company_name2">Company name</string>
    <string name="application_due_date">Application due date</string>
    <string name="add_vacancies">ADD VACANCIES</string>
    <string name="update_vacancy">UPDATE VACANCY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="personal_profile">Personal profile</string>
    <string name="edit_profile_details">Edit Profile Details</string>
    <string name="view_my_vacancies">View My Vacancies</string>
    <string name="sign_out">Sign Out</string>

    <string name="nameH">Name:</string>
    <string name="usernameH">Username:</string>
    <string name="emailH">Email:</string>
    <string name="phoneH">Phone:</string>
    <string name="companyH">Company:</string>
    <string name="passwordH">Password:</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="update_profile_details">Update Profile Details</string>

    <string name="usernamereg">username</string>
    <string name="e_mail">E-mail</string>
    <string name="passwordreg">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="company_name_reg">Company Name</string>
    <string name="current_employee_count">Current Employee Count</string>
    <string name="company_phone_number">Company Phone Number</string>
    <string name="company_category">Company Category</string>
    <string name="sign_up_as_an_employer">Sign Up As an Employer</string>

    <string name="my_company_vacancies">My Company Vacancies</string>
    <string name="edit_vacancy_details">Edit Vacancy Details</string>


</resources>