<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundh"
        tools:context=".SignupEmp">

        <TextView
            android:id="@+id/Empsignuptitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/sign_up_as_an_employer"
            android:textColor="#36454F"
            android:textSize="@dimen/signuptitle"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/EmpRegusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Empsignuptitle"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/opacity"
            android:drawableLeft="@drawable/baseline_person_outline_24"
            android:drawablePadding="20dp"
            android:hint="@string/usernamereg"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/EmpRegEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/EmpRegusername"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/opacity"
            android:drawableLeft="@drawable/baseline_email_24"
            android:drawablePadding="20dp"
            android:hint="@string/e_mail"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/EmpRegPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/EmpRegEmail"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/opacity"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:drawablePadding="20dp"
            android:hint="@string/passwordreg"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/EmpRegRePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/EmpRegPassword"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/opacity"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:drawablePadding="20dp"
            android:hint="@string/re_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/EmpRegCompanyname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/EmpRegRePassword"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/opacity"

            android:drawablePadding="20dp"
            android:hint="@string/company_name_reg"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
        <EditText
            android:id="@+id/EmpRegCompanyppl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/EmpRegCompanyname"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/opacity"

            android:drawablePadding="20dp"
            android:hint="@string/current_employee_count"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/EmpRegCompanyNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/EmpRegCompanyppl"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/opacity"

            android:drawablePadding="20dp"
            android:hint="@string/company_phone_number"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/EmpRegCompanyCateg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/EmpRegCompanyNo"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/opacity"
            android:drawableLeft="@drawable/category"
            android:drawablePadding="20dp"
            android:hint="@string/company_category"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="phone"/>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/EmpRegsignupbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/EmpRegCompanyCateg"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/lightPurple"
            android:text="Register"
            android:textSize="20dp" />



    </RelativeLayout>