<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/signuptitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="Sign Up As an Employer"
        android:textColor="#36454F"
        android:textSize="@dimen/signuptitle"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signuptitle"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/opacity"
        android:drawableLeft="@drawable/baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:hint="@string/usernamereg"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/opacity"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="20dp"
        android:hint="@string/e_mail"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/opacity"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="20dp"
        android:hint="@string/passwordreg"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/RePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Password"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/opacity"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="20dp"
        android:hint="@string/re_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/Companyname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/RePassword"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/opacity"
        android:drawableLeft="@drawable/baseline_work_24"
        android:drawablePadding="20dp"
        android:hint="@string/company_name"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />
    <EditText
        android:id="@+id/Companypeople"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Companyname"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/opacity"
        android:drawableLeft="@drawable/baseline_attribution_24"
        android:drawablePadding="20dp"
        android:hint="@string/current_employee_count"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/Companynumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Companypeople"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/opacity"
        android:drawableLeft="@drawable/baseline_phone_24"
        android:drawablePadding="20dp"
        android:hint="@string/company_phone_number"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/CompanyCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Companynumber"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/opacity"
        android:drawableLeft="@drawable/category"
        android:drawablePadding="20dp"
        android:hint="@string/company_category"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="phone"/>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/signupbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/CompanyCategory"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/lightPurple"
        android:text="Register"
        android:textSize="20dp" />



</RelativeLayout>